<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="com.whinc.widget.test.viewmodels.DisplayViewModel"/>
        <variable name="displayModel" type="DisplayViewModel"/>
    </data>
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >
        <TableRow>
            <TextView android:text="@string/label_axiom"/>
            <TextView android:text="@{displayModel.getDisplay().getGenerator().getAxiom()}"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/label_rules"/>
            <EditText
                android:layout_weight="1"
                bind:text="@{displayModel.getRuleString()}"
                />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/label_color" />
            <EditText
                android:layout_weight="1"
                android:maxLength="6"
                android:gravity="center_horizontal"
                bind:text="@{String.format(`%1$6X`, displayModel.getDisplay().getColor())}"
                android:afterTextChanged="@{displayModel.afterTextChanged}"
                />
            <View
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@{displayModel.color}"
                android:layout_gravity="center_vertical"
                />
        </TableRow>
        <TableRow>
            <Button
                android:text="@string/label_apply"
                android:onClick="@{displayModel.applyBtnClickHandler}"
                />
            <Button
                android:text="@string/label_cancel"
                android:onClick="@{displayModel.cancelBtnClickHandler}"
                />
        </TableRow>
    </TableLayout>
</layout>
